--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -11,7 +11,7 @@
             <form method="post" action="/person">
                 <div class="form-group">
                     <label for="exampleInputEmail1">First name</label>
-                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName">
+                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName" placeholder="first name">
                     <small id="emailHelp" class="form-text text-muted">What does your friends call you</small>
                     <div id="emailHelp" class="invalid-feedback">
                         Please provide a valid name.
@@ -20,14 +20,14 @@
 
                 <div class="form-group">
                     <label for="exampleInputEmail1">Last name</label>
-                    <input type="text" class="form-control" name="lastName">
+                    <input type="text" class="form-control" name="lastName" placeholder="Last name">
                     <small id="emailHelp" class="form-text text-muted">What is ths name after the name your friends
                         called you.</small>
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" name="email">
+                    <label for="exampleInputEmail1">Prescription Medical</label>
+                    <input type="email" class="form-control" name="email" placeholder="email">
                     <small id="emailHelp" class="form-text text-muted">Where do we email you.</small>
                 </div>
 
