--- a/src/main/resources/templates/index.handlebars
+++ b/src/main/resources/templates/index.handlebars
@@ -10,8 +10,8 @@
             <h2>Add name</h2>
             <form method="post" action="/person">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">First name</label>
-                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName" placeholder="first name">
+                    <label for="exampleInputEmail1">Patient's First name</label>
+                    <input type="text" class="form-control {{firstNameInvalid}}" name="firstName" placeholder="Patient's First name">
                     <small id="emailHelp" class="form-text text-muted">What does your friends call you</small>
                     <div id="emailHelp" class="invalid-feedback">
                         Please provide a valid name.
@@ -19,15 +19,15 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Last name</label>
-                    <input type="text" class="form-control" name="lastName" placeholder="Last name">
+                    <label for="exampleInputEmail1">Patient's Last name</label>
+                    <input type="text" class="form-control" name="lastName" placeholder="Patient's Last name">
                     <small id="emailHelp" class="form-text text-muted">What is ths name after the name your friends
                         called you.</small>
                 </div>
 
                 <div class="form-group">
                     <label for="exampleInputEmail1">Prescription Medical</label>
-                    <input type="email" class="form-control" name="email" placeholder="email">
+                    <input type="email" class="form-control" name="email" placeholder="Prescription Medical">
                     <small id="emailHelp" class="form-text text-muted">Where do we email you.</small>
                 </div>
 
