patient handlebars templated created

--- a/src/main/resources/templates/menu.handlebars
+++ b/src/main/resources/templates/menu.handlebars
@@ -22,7 +22,7 @@
             <div class="navbar navbar-dark bg-dark shadow-sm">
                 <div class="container d-flex justify-content-between">
                     <a href="#" class="navbar-brand d-flex align-items-center">
-                        <strong>Spark Java, Jdbi, Postgres & Bootstrap</strong>
+                        <strong>eAppointment</strong>
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
