edoctor.handlebars template added

--- a/src/main/resources/templates/elogin.handlebars
+++ b/src/main/resources/templates/elogin.handlebars
@@ -44,6 +44,26 @@
         </div>
         <div class="col-sm">
             <div class="container" style="text-align:center">
+                <br>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                    <label class="form-check-label" for="exampleRadios1">
+                        eDoctor
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <label class="form-check-label" for="exampleRadios2">
+                        ePatient
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                    <label class="form-check-label" for="exampleRadios3">
+                        ePharmacy
+                    </label>
+                </div>
+                <br>
                 <form action="/action_page.php">
                     <div class="form-group">
                         <label for="email">Email address:</label>
