--- a/src/main/resources/templates/epharmacy.handlebars
+++ b/src/main/resources/templates/epharmacy.handlebars
@@ -7,11 +7,21 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+    <style>
+        .h4 ,h4{
+        text-align: center;
+        font-size: 4.5em;
+        text-shadow: 2px 2px green;
+        }
+    </style>
     <title>ePharmacy!</title>
 </head>
 <body>
-<h1>ePharmacy</h1>
+<div class="jumbotron text-center">
+    <h4>ePharmacy</h4>
+</div>
+
+
 
 <div class="row">
     <div class="col-6">
