edoctor.handlebars template added

--- a/src/main/resources/templates/edoctor.handlebars
+++ b/src/main/resources/templates/edoctor.handlebars
@@ -29,7 +29,7 @@
         }
     </style>
 
-    <title>Hello, world!</title>
+    <title>eHealth Care System</title>
 </head>
 <body>
 <div class="jumbotron text-center">
