--- a/src/main/resources/templates/elogin.handlebars
+++ b/src/main/resources/templates/elogin.handlebars
@@ -20,22 +20,18 @@
             integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
             crossorigin="anonymous"></script>
     <style>
-        #form_login {
-    left: 50%;
-    top: 50%;
-    margin-left: -25%;
-    position: absolute;
-    margin-top: -25%;
-}
-
-
+        .h4 ,h4{
+        text-align: center;
+        font-size: 4.5em;
+        text-shadow: 2px 2px purple;
+        }
     </style>
 
-    <title>Hello, world!</title>
+    <title>eHealth Care System</title>
 </head>
 <body>
 <div class="jumbotron text-center">
-    <h1>eLogin</h1>
+    <h4>eLogin</h4>
 </div>
 
 <div class="container">
