--- a/src/main/resources/templates/epharmacy.handlebars
+++ b/src/main/resources/templates/epharmacy.handlebars
@@ -14,7 +14,7 @@
         text-shadow: 2px 2px green;
         }
     </style>
-    <title>ePharmacy!</title>
+    <title>eHealth Care System</title>
 </head>
 <body>
 <div class="jumbotron text-center">
@@ -46,16 +46,7 @@
         </table>
     </div>
 </div>
-
-<hr>
-
-<!--{{> footer.handlebars}}-->
-
-<hr>
-
-<div class="row" >
-
-
+    <div class="row" ></div>
 </div>
 
 <!-- Optional JavaScript -->
