--- a/src/main/resources/templates/epatient.handlebars
+++ b/src/main/resources/templates/epatient.handlebars
@@ -1,7 +1,27 @@
-{{> header.handlebars}}
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <style>
+        .h4 ,h4{
+        text-align: center;
+        font-size: 4.5em;
+        text-shadow: 2px 2px blue;
+        }
+    </style>
+
+    <title>eHealth Care System</title>
+</head>
 <body>
-    {{> patient-header.handlebars}}
+<div class="jumbotron text-center">
+    <h4>ePatient</h4>
+</div>
 
 <div class="container">
     <div class="row">
@@ -14,14 +34,14 @@
                     <thead>
                     <tr>
                         <th>Doctor</th>
-<!--                        <th>Priority</th>-->
+                        <!--                        <th>Priority</th>-->
                         <th>Date</th>
                     </tr>
                     </thead>
                     {{#each people}}
                         <tr>
                             <td> Appointment with {{firstName}}</td>
-<!--                            <td>{{priorityLevel}}</td>-->
+                            <!--                            <td>{{priorityLevel}}</td>-->
                             <td> on {{date}}</td>
                         </tr>
                     {{/each}}
@@ -34,12 +54,12 @@
                 <div class="form-group">
                     <label for="exampleInputEmail1">Doctor's name</label>
                     <input type="text" class="form-control {{firstNameInvalid}}" name="docName" placeholder="eg Dr. Gumede">
-                    <small id="emailHelp" class="form-text text-muted">What is you Doctor's name?
+                    <small id="emailHelp" class="form-text text-muted">What is you Doctor's name?</small>
 
                 </div>
 
                 <div class="form-group">
-                     <h2>Priority: </h2>
+                    <h2>Priority: </h2>
                     <div class="custom-control custom-radio">
                         <input type="radio" id="low" name="priorityLevel" value="low" class="custom-control-input">
                         <label class="custom-control-label" for="low">Low</label>
@@ -53,17 +73,16 @@
                         <label class="custom-control-label" for="high">High</label>
                     </div>
                 </div>
-
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
-
     </div>
-
-    <hr>
-
-<!--    {{> footer.handlebars}}-->
-
-    <hr>
-
 </div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+</body>
+</html>
