--- a/src/main/resources/templates/elogin.handlebars
+++ b/src/main/resources/templates/elogin.handlebars
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div class="jumbotron text-center">
-    <h4>eLogin</h4>
+    <h4>eHealth-Care</h4>
 </div>
 
 <div class="container">
@@ -42,19 +42,19 @@
             <div class="container" style="text-align:center">
                 <br>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                    <input class="form-check-input" type="radio" name="role" id="exampleRadios1" value="eDoctor">
                     <label class="form-check-label" for="exampleRadios1">
                         eDoctor
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                    <input class="form-check-input" type="radio" name="role" id="exampleRadios2" value="ePatient">
                     <label class="form-check-label" for="exampleRadios2">
                         ePatient
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
+                    <input class="form-check-input" type="radio" name="role" id="exampleRadios3" value="ePharmacy">
                     <label class="form-check-label" for="exampleRadios3">
                         ePharmacy
                     </label>
