--- a/src/main/resources/templates/epatient.handlebars
+++ b/src/main/resources/templates/epatient.handlebars
@@ -1,12 +1,10 @@
-<<<<<<< HEAD:src/main/resources/templates/patient.handlebars
-=======
+
 <!doctype html>
 <html lang="en">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
->>>>>>> ecd9c6e925821d910bee06074e6f18432f538b79:src/main/resources/templates/epatient.handlebars
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -22,13 +20,11 @@
     <title>eHealth Care System</title>
 </head>
 <body>
-<<<<<<< HEAD:src/main/resources/templates/patient.handlebars
-=======
+
 <div class="jumbotron text-center">
     <h4>ePatient</h4>
 </div>
 
->>>>>>> ecd9c6e925821d910bee06074e6f18432f538b79:src/main/resources/templates/epatient.handlebars
 <div class="container">
     <div class="row">
         <div class="col-6">
@@ -57,39 +53,31 @@
             <h2>Request Appointment</h2>
             <br>
             <form method="post" action="/patient_request">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Doctor's name</label>
-                    <input type="text" class="form-control {{firstNameInvalid}}" name="docName" placeholder="eg Dr. Gumede">
-                    <small id="emailHelp" class="form-text text-muted">What is you Doctor's name?</small>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">First name</label>
+                        <input type="text" class="form-control {{firstNameInvalid}}" name="firstName">
+                        <small id="emailHelp" class="form-text text-muted">Enter your first names</small>
+                        <div id="emailHelp" class="invalid-feedback">
+                            Please provide a valid name.
+                        </div>
+                    </div>
 
-                </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Last name</label>
+                        <input type="text" class="form-control" name="lastName">
+                        <small id="emailHelp" class="form-text text-muted">Enter your last name</small>
+                    </div>
 
-                <div class="form-group">
-                    <h2>Priority: </h2>
-                    <div class="custom-control custom-radio">
-                        <input type="radio" id="low" name="priorityLevel" value="low" class="custom-control-input">
-                        <label class="custom-control-label" for="low">Low</label>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Location</label>
+                        <input type="location" class="form-control" name="location">
+                        <small id="emailHelp" class="form-text text-muted">Which area do you live in?</small>
                     </div>
-                    <div class="custom-control custom-radio">
-                        <input type="radio" id="medium" name="priorityLevel" value="medium" class="custom-control-input">
-                        <label class="custom-control-label" for="medium">Medium</label>
-                    </div>
-                    <div class="custom-control custom-radio">
-                        <input type="radio" id="high" name="priorityLevel" value="high" class="custom-control-input">
-                        <label class="custom-control-label" for="high">High</label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
         </div>
     </div>
-<<<<<<< HEAD:src/main/resources/templates/patient.handlebars
-
-    <hr>
-    <hr>
-
-=======
->>>>>>> ecd9c6e925821d910bee06074e6f18432f538b79:src/main/resources/templates/epatient.handlebars
 </div>
 
 <!-- Optional JavaScript -->
