modified script (SQL)

--- a/src/main/resources/templates/elogin.handlebars
+++ b/src/main/resources/templates/elogin.handlebars
@@ -38,7 +38,7 @@
             <div class="col-sm">
             </div>
             <div class="col-sm">
-                <div class="container" style="text-align:center">
+                <div>
                     <br>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="role" id="exampleRadios1" value="eDoctor">
