--- a/src/main/resources/templates/edoctor.handlebars
+++ b/src/main/resources/templates/edoctor.handlebars
@@ -92,7 +92,7 @@
                 <input type="text" name="name" placeholder="Enter a patient's medication">
                 <br>
                 <br>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Prescribe</button>
             </form>
         </div>
     </div>
