--- a/src/main/resources/templates/edoctor.handlebars
+++ b/src/main/resources/templates/edoctor.handlebars
@@ -70,15 +70,29 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                    <br>
-                    <h5>Not approved</h5>
-                    <div id="list">
-                        <ul>
-                            {{#each users}}
-                                <li>{{this}} has been greeted</li>
+                    <div class="col-6">
+                        <h5>Requested</h5>
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th>First name</th>
+                                <th>Last name</th>
+                                <th>Doctor</th>
+                                <th>Location</th>
+                            </tr>
+                            </thead>
+                            {{#each requests}}
+                                <tr>
+                                    <td>{{firstName}}</td>
+                                    <td>{{lastName}}</td>
+                                    <td>{{docName}}</td>
+                                    <td>{{location}}</td>
+                                </tr>
                             {{/each}}
-                        </ul>
-                        <br>
+                        </table>
+                        <br><br>
+                        <button type="button" class="btn btn-success">Accept</button>
+                        <button type="button" class="btn btn-danger">Decline</button>
                     </div>
                 </div>
             </div>
@@ -99,7 +113,7 @@
                 <br>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-        </div>
+            <br>
     </div>
     <div class="tab-pane fade" id="nav-medicalhistory" role="tabpanel" aria-labelledby="nav-contact-tab">
         <div class="soon">
