--- a/src/main/resources/templates/epatient.handlebars
+++ b/src/main/resources/templates/epatient.handlebars
@@ -29,7 +29,6 @@
     <div class="row">
         <div class="col-6">
             <div class="col-6">
-                <br>
                 <h2>Upcoming: </h2>
                 <br>
                 <table class="table">
@@ -42,9 +41,9 @@
                     </thead>
                     {{#each people}}
                         <tr>
-                            <td> Appointment with {{firstName}}</td>
+                            <td>{{firstName}}</td>
                             <!--                            <td>{{priorityLevel}}</td>-->
-                            <td> on {{date}}</td>
+                            <td>{{date}}</td>
                         </tr>
                     {{/each}}
                 </table>
@@ -52,25 +51,31 @@
 
             <h2>Request Appointment</h2>
             <br>
-            <form method="post" action="/patient_request">
+            <form method="post" action="/eDoctor">
                     <div class="form-group">
                         <label for="exampleInputEmail1">First name</label>
-                        <input type="text" class="form-control {{firstNameInvalid}}" name="firstName">
-                        <small id="emailHelp" class="form-text text-muted">Enter your first names</small>
+                        <input type="text" class="form-control {{requests}}" name="firstName">
+                        <small id="emailHelp" class="form-text text-muted">Enter your first name</small>
                         <div id="emailHelp" class="invalid-feedback">
                             Please provide a valid name.
-                        </div>
+                        </div>requests
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group">requests
                         <label for="exampleInputEmail1">Last name</label>
                         <input type="text" class="form-control" name="lastName">
                         <small id="emailHelp" class="form-text text-muted">Enter your last name</small>
                     </div>
 
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Doctor's name</label>
+                    <input type="text" class="form-control" name="docName">
+                    <small id="emailHelp" class="form-text text-muted">Who's the Doctor you'd like to see?</small>
+                </div>
+
                     <div class="form-group">
                         <label for="exampleInputEmail1">Location</label>
-                        <input type="location" class="form-control" name="location">
+                        <input type="text" class="form-control" name="location">
                         <small id="emailHelp" class="form-text text-muted">Which area do you live in?</small>
                     </div>
 
