--- a/src/main/resources/templates/edoctor.handlebars
+++ b/src/main/resources/templates/edoctor.handlebars
@@ -79,14 +79,12 @@
                                 <th>Location</th>
                             </tr>
                             </thead>
-                            {{#each requests}}
                                 <tr>
                                     <td>{{firstName}}</td>
                                     <td>{{lastName}}</td>
                                     <td>{{docName}}</td>
                                     <td>{{location}}</td>
                                 </tr>
-                            {{/each}}
                         </table>
                         <br><br>
                         <button type="button" class="btn btn-success">Accept</button>
@@ -109,7 +107,9 @@
                 <button type="submit" class="btn btn-primary">Prescribe</button>
             </form>
             <br>
+        </div>
     </div>
 </div>
+
 </body>
 </html>
