--- a/src/main/resources/templates/epatient.handlebars
+++ b/src/main/resources/templates/epatient.handlebars
@@ -58,10 +58,10 @@
                         <small id="emailHelp" class="form-text text-muted">Enter your first name</small>
                         <div id="emailHelp" class="invalid-feedback">
                             Please provide a valid name.
-                        </div>requests
+                        </div>
                     </div>
 
-                    <div class="form-group">requests
+                    <div class="form-group">
                         <label for="exampleInputEmail1">Last name</label>
                         <input type="text" class="form-control" name="lastName">
                         <small id="emailHelp" class="form-text text-muted">Enter your last name</small>
@@ -83,13 +83,7 @@
                 </form>
         </div>
     </div>
-<<<<<<< HEAD
 
-    <hr>
-    <hr>
-
-=======
->>>>>>> 06fbc9f53d90eed4667d3aff9bfacab9e9532efd
 </div>
 
 <!-- Optional JavaScript -->
