--- a/src/main/resources/templates/epharmacy.handlebars
+++ b/src/main/resources/templates/epharmacy.handlebars
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
     <style>
         .h4 ,h4{
         text-align: center;
@@ -16,73 +17,33 @@
         }
 
     </style>
+
     <title>eHealth Care System</title>
+
 </head>
+
 <body>
-    <div class="jumbotron text-center">
-       <h4>ePharmacy</h4>
-    </div>
-
-
+<div class="jumbotron text-center">
+    <h4>ePharmacy</h4>
+</div>
 <div class="row">
     <div class="col-6">
-
-        <div class="col-6">
-            <h2>Names</h2>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Patient name</th>
-                    <th>Prescription body</th>
-                    <th>Doctor</th>
-                </tr>
-                </thead>
-                {{#each people}}
-                    <tr>
-                        <td>{{patient_name}}</td>
-                        <td>{{prescription_txt}}</td>
-                        <td>{{doctor}}</td>
-                    </tr>
-                {{/each}}
-            </table>
-        </div>
+        <h2>Names</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Patient name</th>
+                <th>Prescription body</th>
+                <th>Doctor</th>
+            </tr>
+            </thead>
+            <tr>
+                <td>{{patient_name}}</td>
+                <td>{{medicine_name}}</td>
+                <td>{{doctors_name}}</td>
+            </tr>
+        </table>
     </div>
-<<<<<<< HEAD
 </div>
-=======
->>>>>>> 06fbc9f53d90eed4667d3aff9bfacab9e9532efd
-
-    <hr>
-
-
-    <hr>
-
-    <div class="row">
-
-        <div class="row"></div>
-    </div>
-
-<<<<<<< HEAD
-    <div class="row" ></div>
-</div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-=======
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-            crossorigin="anonymous"></script>
->>>>>>> 06fbc9f53d90eed4667d3aff9bfacab9e9532efd
 </body>
 </html>
