pharmacy list prescriptions

--- a/src/main/resources/templates/edoctor.handlebars
+++ b/src/main/resources/templates/edoctor.handlebars
@@ -60,7 +60,7 @@
                     <div id="list">
                         <ul>
                             {{#each users}}
-                                <li>{{this}} has been greeted</li>
+                                <li>{{this}}</li>
                             {{/each}}
                         </ul>
                         <br>
