--- a/src/main/resources/templates/epatient.handlebars
+++ b/src/main/resources/templates/epatient.handlebars
@@ -15,20 +15,63 @@
         font-size: 4.5em;
         text-shadow: 2px 2px blue;
         }
+
+        .heading{
+        text-align: center;
+        padding: 2rem;
+        margin-bottom: 1rem;
+        background-color: #ffc107;
+        border-radius: .3rem;
+        }
+
+        #from{
+        height: 350px;
+        overflow-y: scroll;
+        }
     </style>
 
     <title>eHealth Care System</title>
 </head>
 <body>
 
-<div class="jumbotron text-center">
+<div class="heading">
     <h4>ePatient</h4>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="col-6">
-            <div class="col-6">
+        <div class="col" id="#form" >
+            <h2>Request Appointment</h2>
+            <form method="post" action="/ePatient">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">First name</label>
+                    <input type="text" class="form-control {{requests}}" name="firstName" placeholder="Enter first name">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Last name</label>
+                    <input type="text" class="form-control" name="lastName" placeholder="Enter last name">
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Doctor's name</label>
+                    <input type="text" class="form-control" name="docName" placeholder="Enter doctor's name">
+                    <small id="emailHelp" class="form-text text-muted">Who's the Doctor you'd like to see?</small>
+                </div>
+
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Location</label>
+                    <input type="text" class="form-control" name="location" placeholder="Which area do you live in?">
+                </div>
+
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <br>
+                <br>
+
+            </form>
+        </div>
+        <div class="col">
+            <div>
                 <h2>Upcoming: </h2>
                 <br>
                 <table class="table">
@@ -46,41 +89,9 @@
                     {{/each}}
                 </table>
             </div>
-
-            <h2>Request Appointment</h2>
-            <br>
-            <form method="post" action="/ePatient">
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">First name</label>
-                        <input type="text" class="form-control {{requests}}" name="firstName">
-                        <small id="emailHelp" class="form-text text-muted">Enter your first name</small>
-                        <div id="emailHelp" class="invalid-feedback">
-                            Please provide a valid name.
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Last name</label>
-                        <input type="text" class="form-control" name="lastName">
-                        <small id="emailHelp" class="form-text text-muted">Enter your last name</small>
-                    </div>
-
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Doctor's name</label>
-                    <input type="text" class="form-control" name="docName">
-                    <small id="emailHelp" class="form-text text-muted">Who's the Doctor you'd like to see?</small>
-                </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Location</label>
-                        <input type="text" class="form-control" name="location">
-                        <small id="emailHelp" class="form-text text-muted">Which area do you live in?</small>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
         </div>
     </div>
+
 </div>
 
 <!-- Optional JavaScript -->
