--- a/src/main/resources/templates/elogin.handlebars
+++ b/src/main/resources/templates/elogin.handlebars
@@ -14,12 +14,20 @@
         font-size: 4.5em;
         text-shadow: 2px 2px purple;
         }
+
+        .heading{
+        text-align: center;
+        padding: 2rem;
+        margin-bottom: 1rem;
+        background-color: #d1ff9a;
+        border-radius: .3rem;
+        }
     </style>
 
     <title>eHealth Care System</title>
 </head>
 <body>
-<div class="jumbotron text-center">
+<div class="heading">
     <h4>eHealth-Care</h4>
 </div>
 
