--- a/src/main/resources/templates/epharmacy.handlebars
+++ b/src/main/resources/templates/epharmacy.handlebars
@@ -16,6 +16,20 @@
         text-shadow: 2px 2px green;
         }
 
+        .row{
+
+        padding-left: 2rem;
+        padding-right: 2rem;
+        }
+
+        .heading{
+        text-align: center;
+        padding: 2rem;
+        margin-bottom: 1rem;
+        background-color: #cdc8b1;
+        border-radius: .3rem;
+        }
+
 
     </style>
 
@@ -24,14 +38,14 @@
 </head>
 
 <body>
-<div class="jumbotron text-center">
+<div class="heading">
     <h4>ePharmacy</h4>
 </div>
 
 <div class="row">
     <h2>Names</h2>
     <table class="table">
-        <thead class="thead-light">
+        <thead class="thead-dark">
         <tr>
             <th>Patient name</th>
             <th>Prescription body</th>
