state priority section on patient

--- a/src/main/resources/templates/epatient.handlebars
+++ b/src/main/resources/templates/epatient.handlebars
@@ -69,6 +69,23 @@
                 <input type="text" class="form-control" name="location" placeholder="Which area do you live in?">
             </div>
 
+            <div class="form-group">
+                <label for="exampleInputEmail1">State appointment priority: </label>
+                <div class="custom-control custom-radio">
+                <input type="radio" id="low" name="priorityLevel" class="custom-control-input">
+                <label class="custom-control-label" for="low">Low</label>
+                </div>
+
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="medium" name="priorityLevel" class="custom-control-input">
+                    <label class="custom-control-label" for="medium">Medium</label>
+                </div>
+
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="high" name="priorityLevel" class="custom-control-input">
+                    <label class="custom-control-label" for="high">High</label>
+                </div>
+            </div>
             <button type="submit" class="btn btn-primary">Submit</button>
             <br>
             <br>
